# telephone-billing

./: .clang-format  CMakeLists.txt  CMakePresets.json  Makefile  README.md
src/: CMakeLists.txt  bill.cpp  bill.h  bill_manager.h  bill_options.cpp  bill_options.h  bill_service.cpp  bill_service.h  main.cpp  rate.cpp  rate.h  user.cpp  user.h  user_manager.h  user_options.cpp  user_options.h  user_service.cpp  user_service.h
telephone-billing/: bill.cpp  bill.h  bill_manager.cpp  bill_manager.h  bill_options.cpp  main.cpp  rate.h  telephone-billing.sln  telephone-billing.vcxproj  telephone-billing.vcxproj.filters  telephone_bill.cpp  telephone_bill.h  telephone_bill_manager.cpp  telephone_bill_manager.h  telephone_bill_options.cpp  telephone_bill_options.h  user.cpp  user.h  user_manager.cpp  user_manager.h  user_options.cpp  user_options.h
